# Vale-Structs

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
vale_structs/: main.cpp
vale_structs/include/vale_structs/: array.h  common.h  thread_pool.h  variant.h
vale_structs/utils/: comppch.h  config.h.in
